---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021.08.12
  Bugfixes:
    - Most recipes in the Equipment Workshop did not correctly tick down the To Do List
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021.08.07
  Bugfixes:
    - Fix crash on mining AWESOME Sink (#79)
  Optimizations:
    - Added event filter to ignore ghost entities, massively increasing performance of blueprinting
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021.08.06
  Info:
    - Rearranged changelog to put newest versions at the top, for easier viewing on mod portal
  Bugfixes:
    - Fixed incorrect locale string of radioactive items
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2021.08.06
  Changes:
    - Added "HUB Finder" to the shortcut bar, allowing you to find your way back to the HUB if you get lost.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2021.08.06
  Bugfixes:
    - Hotfix incompatibility with Helmod
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2021.08.06
  Info:
    - Initial public release
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 2021.07.25
  Changes:
    - Added support for un-researching techs in the editor
    - The AWESOME Sink now consumes power constantly, rather than stuttering
    - Machine inputs now correctly pull from both lanes of a belt equally, rather than preferring one over the other
  Ease of use:
    - Truck Stations and (Fluid) Freight Platforms can now be toggled by "rotating" the building
  Bugfixes: