@@ -3,6 +3,8 @@ Version: 1.0.5
 Date: 2021.08.12
   Bugfixes:
     - Most recipes in the Equipment Workshop did not correctly tick down the To Do List
+  Changes:
+    - Craft Bench and Equipment Workshop output inventories are now also counted as "owned" for the To Do List
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 2021.08.07
